# playback

./: .gitignore  README.md
.github/prompts/: plan-musicPlayer.prompt.md
data/schemas/: songs.sql
solo-serve/: .gitignore  README.md  pyproject.toml  requirements.txt  schema.yml
solo-serve/api/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
solo-serve/api/migrations/: 0001_initial.py
solo-serve/api/v1/: urls.py  views.py
solo-serve/config/: settings.py  urls.py
solo-serve/solo_serve/: apps.py  tests.py  urls.py  views.py
solo-web/: .stylelintrc  Dockerfile  README.md  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
solo-web/src/: index.html  styles.scss
solo-web/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
solo-web/src/app/core/config/: api.config.ts
solo-web/src/app/core/services/: audio.service.ts  index.ts  playlist.service.ts  search.service.ts  song.service.ts  storage.service.ts
solo-web/src/app/features/: index.ts
solo-web/src/app/features/music-player/: index.ts  music-player-routing.module.ts  music-player.module.ts  music-player.routes.ts
solo-web/src/app/features/music-player/components/: index.ts  (+3 more)
solo-web/src/app/shared/: shared.module.ts
solo-web/src/app/shared/components/: button.component.ts  icon.component.ts  index.ts  listings-panel.component.ts  progress-bar.component.ts  search-panel.component.ts  side-nav.component.ts  top-bar.component.ts
solo-web/utils/: deploy-solo-web.ps1
(+33 files in other folders)
